--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>smile.silence</groupId>
     <artifactId>tools</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
 
     <build>
         <plugins>
@@ -70,6 +70,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
         </dependency>
     </dependencies>
 </project>
